Addition works. Probably stopping here because I have too much else to do and I don't want to get sucked into the rabbit hole of adding features.

--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,13 @@ tr {
   cursor: pointer;
 }
 
+.total {
+  text-align: center;
+  font-size: 1.1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*----------------------*/
 
 .dataTables_length {
